# mediamosaic

./: .gitignore  README.md
app/: README.md  package.json  svelte.config.js
server/: Cargo.toml  gallery_index.html  index.html  mosaic.toml  serve.py
server/.cargo/: config.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/image/: mod.rs
server/src/repo/: mod.rs
server/src/scanner/: bundle.rs  directory.rs  handler.rs  image.rs  mod.rs
server/src/thumbnail/: bundle.rs  image.rs  mod.rs
