[package]
name = "mosaic"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
image = "0.25.6"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.5"
tower = "0.5.2"
