[package]
name = "mosaic"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
env_logger = "0.11.8"
http = "1.3.1"
image = "0.25.6"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.5"
tower = "0.5.2"
